--- a/src/Form.css
+++ b/src/Form.css
@@ -41,3 +41,10 @@ button{
     padding: 1rem;
     border-radius: 10px;
 }
+
+button:hover{
+    border: none;
+    border: 4px double green;
+    opacity: 0.7;
+    cursor: pointer;
+}
