--- a/src/View.css
+++ b/src/View.css
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: solid 2px green;
 }
 
 span{
@@ -17,4 +18,10 @@ span{
     padding: 0.5rem;
     border-bottom: solid 2px white;
    
+}
+button{
+    background-color: snow;
+    width: 40%;
+    font-weight: bold;
+    color: green;
 }
